fixed layout issues in smaller devices

--- a/src/App.css
+++ b/src/App.css
@@ -147,7 +147,7 @@ html,body,#root {
     }
     .profile .info{
         margin: auto 0 ;
-        width: 65%;
+        width: 60%;
     }
     
     .profile img{
